auth/Keycloak/kibo-keycloak-postgres-ephemeral.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  ports:
    - port: 5432
      name: postgres
  selector:
    app: postgres
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - image: postgres:16.2
          name: postgres
          ports:
            - containerPort: 5432
              name: postgres
          securityContext:
            privileged: false
          resources:
            limits:
              memory: 1024Mi
              cpu: "1"
