auth/Keycloak/kibo-keycloak-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  labels:
    app: postgres-svc
spec:
  ports:
    - port: 5432
      name: postgres-port
  selector:
    app: postgres-db
  type: LoadBalancer
